@@ -1,10 +1,11 @@
 package com.example.demo.principles;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.jspecify.annotations.Nullable;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.example.demo.entity.User;
@@ -19,8 +20,8 @@ public class UserPrincilpals implements UserDetails {
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		// TODO Auto-generated method stub
-//		return List.of(new SimpleGrantedAuthority("ROLE_"+user.getRole().toUpperCase()));
-	return	Collections.emptyList();//not yet
+		return List.of(new SimpleGrantedAuthority("ROLE_"+user.getRole().toUpperCase()));
+//	return	Collections.emptyList();//not yet
 	}
 
 	@Override
